--- a/inventory-service/src/main/resources/application.properties
+++ b/inventory-service/src/main/resources/application.properties
@@ -16,12 +16,10 @@ eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 
 # actuator
 management.port=8083
-management.endpoints.web.exposure.include= prometheus
-management.endpoint.health.show-details=always
+management.endpoints.web.exposure.include= prometheus,health,info,prometheus,metrics,threaddump,httptrace
 
 
 
 # zipkin
 
-management.zipkin.tracing.endpoint=http://zipkin:9411
 management.tracing.sampling.probability=1.0
