--- a/auth0demo/src/main/resources/application.properties
+++ b/auth0demo/src/main/resources/application.properties
@@ -18,3 +18,15 @@ spring.application.name=user-service
 server.port=80
 #auth0.loginUrl=https://dev-m0pu2uuglyzgrxx5.us.auth0.com/login
 #auth0.registerUrl=https://dev-m0pu2uuglyzgrxx5.us.auth0.com/signup
+eureka.client.serviceUrl.defaultZone=http://discovery-service:8761/eureka
+
+
+
+# actuator
+management.port=80
+management.endpoints.web.exposure.include= prometheus,health,info,prometheus,metrics,threaddump,httptrace
+
+
+# zipkin
+
+management.tracing.sampling.probability=1.0
