--- a/cart-service/Dockerfile
+++ b/cart-service/Dockerfile
@@ -7,6 +7,6 @@ RUN mvn clean package -DskipTests
 
 # Runtime stage
 FROM openjdk:17
-COPY --from=build /home/app/target/*.jar payment-gateway-service.jar
-EXPOSE 8089
-ENTRYPOINT ["java", "-jar", "/payment-gateway-service.jar"]
+COPY --from=build /home/app/target/*.jar cart-service.jar
+EXPOSE 8086
+ENTRYPOINT ["java", "-jar", "/product-service.jar"]
