--- a/cart-service/src/main/resources/application.properties
+++ b/cart-service/src/main/resources/application.properties
@@ -14,3 +14,13 @@ spring.datasource.password=trng1985-3
 #eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 #eureka.client.register-with-eureka=true
 #eureka.client.fetch-registry=true
+
+eureka.client.serviceUrl.defaultZone=http://discovery-service:8761/eureka
+# actuator
+management.port=8086
+management.endpoints.web.exposure.include= prometheus,health,info,prometheus,metrics,threaddump,httptrace
+
+
+# zipkin
+
+management.tracing.sampling.probability=1.0
