--- a/discovery-service/src/main/resources/application.properties
+++ b/discovery-service/src/main/resources/application.properties
@@ -1,16 +1,16 @@
 spring.application.name=discovery-service
 server.port=8761
-eureka.client.register-with-eureka=false
-eureka.client.fetch-registry=false
-eureka.instance.prefer-ip-address=true
-#eureka.client.serviceUrl.defaultZone=http://discovery-service:8761/eureka
+# eureka.client.register-with-eureka=false
+# eureka.client.fetch-registry=false
+# eureka.instance.prefer-ip-address=true
+eureka.client.serviceUrl.defaultZone=http://discovery-service:8761/eureka
 
 
 # actuator
-#management.port=8761
-#management.endpoints.web.exposure.include= prometheus
+management.port=8761
+management.endpoints.web.exposure.include= prometheus,health,info,prometheus,metrics,threaddump,httptrace
 
 
 # zipkin
 
-#management.tracing.sampling.probability=1.0
+management.tracing.sampling.probability=1.0
