--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -31,7 +31,7 @@ services:
       - "9411:9411"
 
   discovery-service:
-    image: krishnagopika4/discovery-service:latest
+    image: majaaz/discovery-service:latest
     build:
       context: ./discovery-service
       dockerfile: Dockerfile
@@ -41,7 +41,7 @@ services:
       - SPRING_PROFILES_ACTIVE=docker
 
   apigateway-service:
-    image: krishnagopika4/apigateway-service:latest
+    image: majaaz/apigateway-service:latest
     build:
       context: ./apigateway-service
       dockerfile: Dockerfile
@@ -53,7 +53,7 @@ services:
       - discovery-service
 
   order-service:
-    image: krishnagopika4/order-service:latest
+    image: majaaz/order-service:latest
     build:
       context: ./order-service
       dockerfile: Dockerfile
@@ -67,7 +67,7 @@ services:
       - apigateway-service
 
   product-service:
-    image: krishnagopika4/product-service:latest
+    image: majaaz/product-service:latest
     build:
       context: ./product-service
       dockerfile: Dockerfile
@@ -78,9 +78,48 @@ services:
     depends_on:
       - discovery-service
       - apigateway-service
+  
+  user-service:
+    image: majaaz/user-service:latest
+    build:
+      context: ./user-service
+      dockerfile: Dockerfile
+    ports:
+      - 80:80
+    environment:
+      - SPRING_PROFILES_ACTIVE=docker
+    depends_on:
+      - discovery-service
+      - apigateway-service
 
+  cart-service:
+    image: majaaz/cart-service:latest
+    build:
+      context: ./cart-service
+      dockerfile: Dockerfile
+    ports:
+      - 8086:8086
+    environment:
+      - SPRING_PROFILES_ACTIVE=docker
+    depends_on:
+      - discovery-service
+      - apigateway-service
+  
+  payment-gateway-service:
+    image: majaaz/payment-gateway-service:latest
+    build:
+      context: ./payment-gateway-service
+      dockerfile: Dockerfile
+    ports:
+      - 8089:8089
+    environment:
+      - SPRING_PROFILES_ACTIVE=docker
+    depends_on:
+      - discovery-service
+      - apigateway-service
+  
   inventory-service:
-    image: krishnagopika4/inventory-service:latest
+    image: majaaz/inventory-service:latest
     build:
       context: ./inventory-service
       dockerfile: Dockerfile
@@ -93,7 +132,7 @@ services:
       - apigateway-service
   
   notification-service:
-    image: krishnagopika4/notification-service:latest
+    image: majaaz/notification-service:latest
     build:
       context: ./notification-service
       dockerfile: Dockerfile
