--- a/notification-service/src/main/resources/application.properties
+++ b/notification-service/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 # eureka server
-#eureka.client.serviceUrl.defaultZone=http://discovery-service:8761/eureka
+eureka.client.serviceUrl.defaultZone=http://discovery-service:8761/eureka
 
 # kafka consumer 
 
@@ -21,10 +21,9 @@ spring.kafka.consumer.group-id= notificationId
 spring.kafka.consumer.properties.spring.json.type.mapping=event:com.revature.revshop.event.OrderEvent
 # actuator
 management.port=8085
-management.endpoints.web.exposure.include= prometheus
+management.endpoints.web.exposure.include= prometheus,health,info,prometheus,metrics,threaddump,httptrace
 
 
 # zipkin
 
-management.zipkin.tracing.endpoint=http://zipkin:9411
 management.tracing.sampling.probability=1.0
