--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.datasource.username=admin
 spring.datasource.password=trng1985-3
 
 # eureka server
-#eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 
 # actuator
 
@@ -22,14 +22,14 @@ management.endpoint.health.show-details=always
 
 ## resilience 4j
 #
-#resilience4j.circuitbreaker.instances.inventory-service.registerHealthIndicator=true
-#resilience4j.circuitbreaker.instances.inventory-service.event-consumer-buffer-size=10
-#resilience4j.circuitbreaker.instances.inventory-service.slidingWindowType=COUNT_BASED
-#resilience4j.circuitbreaker.instances.inventory-service.slidingWindowSize=5
-#resilience4j.circuitbreaker.instances.inventory-service.failureRateThreshold=50
-#resilience4j.circuitbreaker.instances.inventory-service.waitDurationInOpenState=5s
-#resilience4j.circuitbreaker.instances.inventory-service.permittedNumberOfCallsInHalfOpenState=3
-#resilience4j.circuitbreaker.instances.inventory-service.automaticTransitionFromOpenToHalfOpenEnabled=true
+resilience4j.circuitbreaker.instances.inventory-service.registerHealthIndicator=true
+resilience4j.circuitbreaker.instances.inventory-service.event-consumer-buffer-size=10
+resilience4j.circuitbreaker.instances.inventory-service.slidingWindowType=COUNT_BASED
+resilience4j.circuitbreaker.instances.inventory-service.slidingWindowSize=5
+resilience4j.circuitbreaker.instances.inventory-service.failureRateThreshold=50
+resilience4j.circuitbreaker.instances.inventory-service.waitDurationInOpenState=5s
+resilience4j.circuitbreaker.instances.inventory-service.permittedNumberOfCallsInHalfOpenState=3
+resilience4j.circuitbreaker.instances.inventory-service.automaticTransitionFromOpenToHalfOpenEnabled=true
 #
 ## resilience 4j time
 #
@@ -49,5 +49,4 @@ spring.kafka.consumer.properties.spring.json.type.mapping=event:com.revature.rev
 #
 ## zipkin
 #
-#management.zipkin.tracing.endpoint=http://zipkin:9411
-#management.tracing.sampling.probability=1.0
+management.tracing.sampling.probability=1.0
