--- a/apigateway-service/src/main/resources/application.properties
+++ b/apigateway-service/src/main/resources/application.properties
@@ -63,10 +63,10 @@ spring.cloud.gateway.routes[6].uri=lb://payment-gateway-service
 spring.cloud.gateway.routes[6].predicates[0]=Path=/pay
 spring.cloud.gateway.routes[6].predicates[1]=Path=/pay/**
 
-spring.cloud.gateway.routes[9].id=user-service
-spring.cloud.gateway.routes[9].uri=lb://user-service
-spring.cloud.gateway.routes[9].predicates[0]=Path=/jsp
-spring.cloud.gateway.routes[9].predicates[1]=Path=/jsp/**
+# spring.cloud.gateway.routes[9].id=user-service
+# spring.cloud.gateway.routes[9].uri=lb://user-service
+# spring.cloud.gateway.routes[9].predicates[0]=Path=/jsp
+# spring.cloud.gateway.routes[9].predicates[1]=Path=/jsp/**
 
 # Actuator
 management.port=9000
