--- a/auth0demo/pom.xml
+++ b/auth0demo/pom.xml
@@ -111,8 +111,7 @@
                 <artifactId>spring-boot-starter-tomcat</artifactId>
                 <scope>provided</scope>
             </dependency>
-</dependencies>
-
+<dependency>
 <groupId>org.springframework.security</groupId>
 <artifactId>spring-security-test</artifactId>
 <scope>test</scope>
