--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -4,13 +4,8 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql=true
 
-# MySQL Database Configuration
-spring.datasource.url=jdbc:mysql://trng-00001985-3.chueiwozbnfz.us-east-1.rds.amazonaws.com:3306/orders
-spring.datasource.username=admin
-spring.datasource.password=trng1985-3
-
 # eureka server
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+eureka.client.serviceUrl.defaultZone=http://discovery-service:8761/eureka
 
 # actuator
 
