--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -132,7 +132,9 @@ services:
       - management.zipkin.tracing.endpoint=http://zipkin:9411/api/v2/spans
       - spring.datasource.url=jdbc:mysql://${DB_URL}:3306/payment
       - spring.datasource.username=${RDS_USERNAME}
-      - spring.datasource.password=${DB_PASSWORD}
+      - spring. data source.password=${DB_PASSWORD}
+      - razorpay.key=${RZP_KEY}
+      - razorpay.secret=${RZP_SECRET}
     depends_on:
       - discovery-service
       - apigateway-service
@@ -165,6 +167,8 @@ services:
       - SPRING_ZIPKIN_ENABLED=true
       - management.zipkin.tracing.endpoint=http://zipkin:9411/api/v2/spans
       - spring.kafka.bootstrap-servers=broker:29092
+      - spring.mail.username=${SMTP_USERNAME}
+      - spring.mail.password=${SMTP_PASSWORD}
     depends_on:
       - discovery-service
       - apigateway-service
